
[v.1.0.3.0]
- feature - added About window
    issue #4
- feature - added topic names autocompleciton in topic config window
- feature - user can define how many messages should be received by kafka listener
    issue #3, #5

[v.1.0.2.0]
- improvement - performance improvement (but more work needed)- log window can accept more entries before it freezes (!sic)
    added limitation to log records visible count

[v.1.0.1.1]
- fixed #1: App does not stop sending multiple messages if cannot connect to broker on first message
- improvement - performance improvement - can now receive 10k messages on msg listener without gui freeze

[v.1.0.1.0]
- feautre - added cleanup.policy option (delete/compacted) to CreateTopic dialog

[v.1.0.0.0]
First working version